@@ -271,7 +271,7 @@ extern void caml_install_invalid_parameter_handler();
 
 #endif
 
-extern int ensure_spacetime_dot_o_is_included;
+extern int caml_ensure_spacetime_dot_o_is_included;
 
 /* Main entry point when loading code from a file */
 
@@ -284,7 +284,7 @@ CAMLexport void caml_main(char **argv)
   char * shared_lib_path, * shared_libs, * req_prims;
   char * exe_name, * proc_self_exe;
 
-  ensure_spacetime_dot_o_is_included++;
+  caml_ensure_spacetime_dot_o_is_included++;
 
   /* Machine-dependent initialization of the floating-point hardware
      so that it behaves as much as possible as specified in IEEE */
